# ogaboga

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/: drum_machine.rs  random.rs
src/: effects.rs  envelope.rs  lib.rs  main.rs  pulse_modulator.rs  rhythm.rs  voice.rs  voice_pool.rs  wave_generator.rs  waveforms.rs
src/scale/: mod.rs  notes.rs
src/sequencer/: generator.rs  mod.rs  pool.rs  sequencer_thread.rs
src/voice/: mod.rs  pool.rs  thread.rs
