[package]
name = "ogaboga"
description = "Dumb n-voice waveform modulator."
repository = "https://github.com/isidornygren/ogaboga"
version = "0.1.0"
authors = ["Isidor Nygren <karlisidornygren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
name = "ogaboga"
path = "src/lib.rs"

[dependencies]
cpal = "0.10.0"
rand = "0.7.2"
